--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@ html,
 body {
   max-width: 100vw;
   padding: 0;
+  margin:0;
   background-color: var(--background);
   color: var(--foreground);
 }
@@ -33,3 +34,26 @@ a {
     color-scheme: dark;
   }
 }
+
+.layout {
+  display: flex;
+  min-height: 100vh;
+  background-color: #1a1a1a;
+  margin:-8px;
+}
+
+.main {
+  flex: 1;
+  margin-left: 250px;
+  padding: 0;
+  background-color: #1a1a1a;
+  min-height: 100vh;
+  transition: margin-left 0.3s ease;
+}
+
+@media (max-width: 768px) {
+  .main {
+    margin-left: 0;
+    padding-top: 3.5rem;
+  }
+} 
